--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.GroceryApp"
         android:usesCleartextTraffic="true">
-        <activity android:name=".activities.FinishActivity"></activity>
+        <activity android:name=".activities.OrderHistoryActivity"></activity>
+        <activity android:name=".activities.AccountActivity" />
+        <activity android:name=".activities.FinishActivity" />
         <activity android:name=".activities.PaymentActivity" />
         <activity android:name=".activities.UpdateAddressActivity" />
         <activity android:name=".activities.AddAddressActivity" />
